--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,19 @@ requests==2.31.0
 beautifulsoup4==4.12.3
 gunicorn==21.2.0
 Werkzeug==3.0.1
-python-dotenv==1.0.1 
+python-dotenv==1.0.1
+pymongo==4.6.1
+Flask-Login==0.6.3
+dnspython==2.5.0
+bs4==0.0.2
+Jinja2==3.1.3
+itsdangerous==2.1.2
+click==8.1.7
+setuptools==69.1.1
+wheel==0.42.0
+MarkupSafe==2.1.5
+certifi==2024.2.2
+charset-normalizer==3.3.2
+idna==3.6
+soupsieve==2.5
+urllib3==2.2.0 
